--- a/markup/_dist/players.html
+++ b/markup/_dist/players.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="assets/css/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
@@ -94,6 +95,12 @@
                   <div class="nl-data--text">
                     <p class="title">team formats</p>
                     <p>other details go here</p>
+                  </div>
+                </div>
+                <div class="nl-players-search">
+                  <div class="input-group">
+                    <input type="text" placeholder="Search for..." class="form-control"><span class="input-group-btn">
+                      <button type="button" class="btn btn-secondary"><i class="fa fa-search" aria-hidden="true"></i></button></span>
                   </div>
                 </div>
                 <ul role="tablist" class="nav nav-tabs">
@@ -230,6 +237,7 @@
     <script type="text/javascript" src="assets/js/owl.carousel.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery.fancybox.min.js"></script>
     <script type="text/javascript" src="assets/js/tether.min.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.mCustomScrollbar.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/js/common.js"></script>
   </body>
