# Home Page: fix footer block # Players Page: add carousel, responsive: in process, custom scroll: in process.

--- a/markup/_dist/index.html
+++ b/markup/_dist/index.html
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div class="nl-header--slide">
-        <div class="owl-carousel">
+        <div class="owl-carousel main-carousel">
           <div class="item nl-slide">
             <div class="container-fluid">
               <h1>Draft your line up with <br />no limit coins</h1>
@@ -278,7 +278,7 @@
         </div>
       </div>
       <div class="nl-footer--button">
-        <div class="row">
+        <div class="row align-items-center">
           <div class="col-lg-9">
             <p>Copyright © 2017 No Limit Fantasy Sports, LLC All Rights Reserved Contest Rules, Terms and Conditions and Privacy Policy</p>
           </div>
