--- a/markup/_dist/players.html
+++ b/markup/_dist/players.html
@@ -21,7 +21,7 @@
             <div class="col-lg-7 nl-header-top--left">
               <div class="row nl-h100">
                 <div class="col-lg-2">
-                  <div class="nl-logotype"><a href="#"><img src="assets/img/logotype.svg" alt="NO Limit"></a></div>
+                  <div class="nl-logotype"><a href="index.html"><img src="assets/img/logotype.svg" alt="NO Limit"></a></div>
                 </div>
                 <div class="col-lg-10 align-self-center">
                   <div class="nl-title">The worlds first crypto fantasy sports</div>
@@ -83,6 +83,50 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
+              <h1>PLAYERS</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="nl-players-filter-title">Filter by lEAgue:</div>
+              <div class="nl-players-filter"><a href="#"><img src="assets/img/flag/USA.png" alt="USA"></a><a href="#"><img src="assets/img/flag/Spain.png" alt="Spain"></a><a href="#"><img src="assets/img/flag/Germany.png" alt="Germany"></a><a href="#"><img src="assets/img/flag/France.png" alt="France"></a>
+                <div class="btn btn-primary">Reset Filter</div>
+              </div>
+              <div class="nl-players-filter-title">FILTER by team:</div>
+              <div class="nl-players-filter-caruseul">
+                <div class="owl-carousel pl-teams">
+                  <div><a href="#"><img src="assets/img/emblem/FC.png" alt="FC"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/FCB.png" alt="FCB"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/FCBrasil.png" alt="FCBrasil"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/MU.png" alt="MU"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/FC.png" alt="FC"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/FCB.png" alt="FCB"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/FCBrasil.png" alt="FCBrasil"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/MU.png" alt="MU"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/FC.png" alt="FC"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/FCB.png" alt="FCB"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/FCBrasil.png" alt="FCBrasil"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/MU.png" alt="MU"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/FC.png" alt="FC"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/FCBrasil.png" alt="FCBrasil"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/MU.png" alt="MU"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/FC.png" alt="FC"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/FCB.png" alt="FCB"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/FCBrasil.png" alt="FCBrasil"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/MU.png" alt="MU"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/FCB.png" alt="FCB"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/FCBrasil.png" alt="FCBrasil"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/MU.png" alt="MU"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/FC.png" alt="FC"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/FCB.png" alt="FCB"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/FCBrasil.png" alt="FCBrasil"></a></div>
+                  <div><a href="#"><img src="assets/img/emblem/MU.png" alt="MU"></a></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
               <div class="nl-players-table">
                 <div class="nl-players-table-data-field">
                   <div class="nl-data--avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"></div>
@@ -96,11 +140,11 @@
                     <p class="title">team formats</p>
                     <p>other details go here</p>
                   </div>
-                </div>
-                <div class="nl-players-search">
-                  <div class="input-group">
-                    <input type="text" placeholder="Search for..." class="form-control"><span class="input-group-btn">
-                      <button type="button" class="btn btn-secondary"><i class="fa fa-search" aria-hidden="true"></i></button></span>
+                  <div class="nl-players-search">
+                    <div class="input-group">
+                      <input type="text" placeholder="Search by player name" class="form-control"><span class="input-group-btn">
+                        <button type="button" class="btn btn-secondary"><i class="fa fa-search" aria-hidden="true"></i></button></span>
+                    </div>
                   </div>
                 </div>
                 <ul role="tablist" class="nav nav-tabs">
@@ -222,11 +266,11 @@
     <footer class="nl-footer">
       <div class="nl-footer--button">
         <div class="row">
-          <div class="col-lg-9">
+          <div class="col-lg-8">
             <div class="nl-social-icon"><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></div>
-            <p>Copyright © 2017 No Limit Fantasy Sports, LLC All Rights Reserved Contest Rules, Terms and Conditions and Privacy Policy</p>
+            <p><br />Copyright © 2017 No Limit Fantasy Sports, LLC All Rights Reserved Contest Rules, Terms and Conditions and Privacy Policy<br /></p>
           </div>
-          <div class="col-lg-3 nl-tar">
+          <div class="col-lg-4 nl-tar">
             <div class="input-group-btn"><a htef="#" class="btn btn-footer">Forum</a><a htef="#" class="btn btn-footer">Contact Us</a></div>
             <div class="input-group-btn"><a htef="#" class="btn btn-footer">Faq</a><a htef="#" class="btn btn-footer">Terms & Conditions</a></div>
           </div>
