--- a/markup/_dist/my_teams.html
+++ b/markup/_dist/my_teams.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="assets/css/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
@@ -20,7 +21,7 @@
             <div class="col-lg-7 nl-header-top--left">
               <div class="row nl-h100">
                 <div class="col-lg-2">
-                  <div class="nl-logotype"><a href="#"><img src="assets/img/logotype.svg" alt="NO Limit"></a></div>
+                  <div class="nl-logotype"><a href="index.html"><img src="assets/img/logotype.svg" alt="NO Limit"></a></div>
                 </div>
                 <div class="col-lg-10 align-self-center">
                   <div class="nl-title">The worlds first crypto fantasy sports</div>
@@ -90,11 +91,11 @@
     <footer class="nl-footer">
       <div class="nl-footer--button">
         <div class="row">
-          <div class="col-lg-9">
+          <div class="col-lg-8">
             <div class="nl-social-icon"><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></div>
-            <p>Copyright © 2017 No Limit Fantasy Sports, LLC All Rights Reserved Contest Rules, Terms and Conditions and Privacy Policy</p>
+            <p><br />Copyright © 2017 No Limit Fantasy Sports, LLC All Rights Reserved Contest Rules, Terms and Conditions and Privacy Policy<br /></p>
           </div>
-          <div class="col-lg-3 nl-tar">
+          <div class="col-lg-4 nl-tar">
             <div class="input-group-btn"><a htef="#" class="btn btn-footer">Forum</a><a htef="#" class="btn btn-footer">Contact Us</a></div>
             <div class="input-group-btn"><a htef="#" class="btn btn-footer">Faq</a><a htef="#" class="btn btn-footer">Terms & Conditions</a></div>
           </div>
@@ -105,6 +106,7 @@
     <script type="text/javascript" src="assets/js/owl.carousel.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery.fancybox.min.js"></script>
     <script type="text/javascript" src="assets/js/tether.min.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.mCustomScrollbar.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/js/common.js"></script>
   </body>
