--- a/markup/_dist/my_teams.html
+++ b/markup/_dist/my_teams.html
@@ -82,7 +82,25 @@
       <section class="nl-section nl-my-teams">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-12"></div>
+            <div class="col-md-12">
+              <h1>My teams</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="btn btn-primary btn-lg">Create team</div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="status-wrapper">
+                <ul>
+                  <li>Playing</li>
+                  <li>Played</li>
+                  <li>Not Playing</li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </section>
