add registration modal

--- a/markup/_dist/contact.html
+++ b/markup/_dist/contact.html
@@ -13,6 +13,7 @@
   <body>
     <h1> Gulp - BrowserSync, Jade, Sass starter templates.</h1>
     <p>Congrates you have done it.<b>Happy coding.</b></p>
+    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&amp;render=explicit" async="" defer=""></script>
     <script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="assets/js/owl.carousel.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery.fancybox.min.js"></script>
