# Players Page: add responsive, add custom scroll.

--- a/markup/_dist/index.html
+++ b/markup/_dist/index.html
@@ -28,7 +28,7 @@
             <div class="col-12 col-lg-3">
               <div class="nl-btutton-login">
                 <button type="button" data-toggle="modal" data-target="#loginModal" class="btn btn-primary nl-m-r-15">Login</button>
-                <div type="button" data-toggle="modal" data-target="#registrationModal" class="btn">SIGN UP</div>
+                <button type="button" data-toggle="modal" data-target="#registrationModal" class="btn">SIGN UP</button>
               </div>
             </div>
           </div>
@@ -328,7 +328,8 @@
               <div data-sitekey="your_site_key" class="g-recaptcha"></div>
               <label class="check-wrapper">
                 <input type="checkbox" value="">
-                <p>I agree to the No Limit Fantasy Sports, LLC Contest<a href="#">Rules</a>,<a href="#">Terms and Conditions</a> and<a href="#">Privacy Policy</a> and represent that I am of legal age to play Fantasy Sports in my state of residence. Residents of the states of Alabama, Arizona, Colorado, Delaware, Florida, Georgia, Hawaii, Idaho, Illinois, Indiana, Iowa, Louisiana, Massachusetts, Michigan, Mississippi, Missouri, Montana, Nevada, New York, North Dakota, Pennsylvania, Tennessee, Texas, Vermont, Virginia and Washington, as well as Puerto Rico and where otherwise prohibited by law are not eligible to enter Fantasy Sports Pay to play contests.</p>
+                <p>I agree to the No Limit Fantasy Sports, LLC Contest <a href="#">Rules</a> , <a href="#">Terms and Conditions</a>  and <a href="#">Privacy Policy</a>  and represent that I am of legal age to play Fantasy Sports in my state of residence. Residents of the states of Alabama, Arizona, Colorado, Delaware, Florida, Georgia, Hawaii, Idaho, Illinois, Indiana, Iowa, Louisiana, Massachusetts, Michigan, Mississippi, Missouri, Montana, Nevada, New York, North Dakota, Pennsylvania, Tennessee, Texas, Vermont, Virginia and Washington, as well as Puerto Rico and where otherwise prohibited by law are not eligible to enter Fantasy Sports Pay to play contests.
+                </p>
               </label>
             </form>
           </div>
