# Home Page: modal add responsive and custom select

--- a/markup/_dist/index.html
+++ b/markup/_dist/index.html
@@ -314,7 +314,7 @@
                 <input id="lastName" placeholder="LAST NAME" required="" autofocus="" class="form-control">
               </div>
               <div class="input-group">
-                <select id="country" placeholder="COUNTRY" required="" class="form-control">
+                <select id="country" placeholder="COUNTRY" required="" class="form-control custom-select">
                   <option selected="" disabled="" hidden="">COUNTRY</option>
                   <option>USA</option>
                   <option>CANADA</option>
