--- a/markup/_dist/my_teams.html
+++ b/markup/_dist/my_teams.html
@@ -21,7 +21,7 @@
             <div class="col-12 p-0">
               <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
                 <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><span class="navbar-toggler-icon"></span></button>
-                <div class="row">
+                <div class="row m-0">
                   <div class="col-lg-7 nl-header-top--left">
                     <div class="row nl-h100">
                       <div class="col-lg-2">
