# My Team Page: responsive, Players Page: responsive mobile

--- a/markup/_dist/my_teams.html
+++ b/markup/_dist/my_teams.html
@@ -101,22 +101,17 @@
                 </ul>
               </div>
             </div>
-            <div class="col-md-4">
-              <div class="btn btn-primary pull-right">Create helmet</div>
+            <div class="col-md-4 nl-tar">
+              <div class="btn btn-primary nl-m-b-225">Create helmet</div>
             </div>
           </div>
           <div class="row nl-m-b-25">
-            <div class="col-6 col-lg-3">
+            <div class="col-12 col-md-6 col-lg-3">
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <div class="row align-items-center">
-                        <div class="col-8 nl-m-r-64">
-                          <p>Team:<span class="title">team NLC2</span></p>
-                        </div>
-                        <div class="col-4"><img src="assets/img/helmet.png" alt="helmet"></div>
-                      </div>
+                      <p>Team:<span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet">
                     </div>
                   </div>
                 </div>
@@ -222,17 +217,12 @@
                 </div>
               </div>
             </div>
-            <div class="col-6 col-lg-3">
+            <div class="col-12 col-md-6 col-lg-3">
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <div class="row align-items-center">
-                        <div class="col-8 nl-m-r-64">
-                          <p>Team:<span class="title">team NLC2</span></p>
-                        </div>
-                        <div class="col-4"><img src="assets/img/helmet.png" alt="helmet"></div>
-                      </div>
+                      <p>Team:<span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet">
                     </div>
                   </div>
                 </div>
@@ -338,17 +328,12 @@
                 </div>
               </div>
             </div>
-            <div class="col-6 col-lg-3">
+            <div class="col-12 col-md-6 col-lg-3">
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <div class="row align-items-center">
-                        <div class="col-8 nl-m-r-64">
-                          <p>Team:<span class="title">team NLC2</span></p>
-                        </div>
-                        <div class="col-4"><img src="assets/img/helmet.png" alt="helmet"></div>
-                      </div>
+                      <p>Team:<span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet">
                     </div>
                   </div>
                 </div>
@@ -454,17 +439,12 @@
                 </div>
               </div>
             </div>
-            <div class="col-6 col-lg-3">
+            <div class="col-12 col-md-6 col-lg-3">
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <div class="row align-items-center">
-                        <div class="col-8 nl-m-r-64">
-                          <p>Team:<span class="title">team NLC2</span></p>
-                        </div>
-                        <div class="col-4"><img src="assets/img/helmet.png" alt="helmet"></div>
-                      </div>
+                      <p>Team:<span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet">
                     </div>
                   </div>
                 </div>
