--- a/markup/_dist/players.html
+++ b/markup/_dist/players.html
@@ -90,11 +90,27 @@
             <div class="col-md-12">
               <div class="nl-players-filter-title">Filter by lEAgue:</div>
               <div class="nl-players-filter">
-                <button type="button" class="btn btn-link"><img src="assets/img/flag/USA.png" alt="USA"></button>
-                <button type="button" class="btn btn-link"><img src="assets/img/flag/Spain.png" alt="Spain"></button>
-                <button type="button" class="btn btn-link"><img src="assets/img/flag/Germany.png" alt="Germany"></button>
-                <button type="button" class="btn btn-link"><img src="assets/img/flag/France.png" alt="France"></button>
-                <button type="clear" class="btn btn-primary">Reset Filter</button>
+                <div class="row align-items-center">
+                  <div class="col-md-5">
+                    <div class="owl-carousel pl-flag">
+                      <div>
+                        <button type="button" class="btn btn-link"><img src="assets/img/flag/USA.png" alt="USA"></button>
+                      </div>
+                      <div>
+                        <button type="button" class="btn btn-link"><img src="assets/img/flag/Spain.png" alt="Spain"></button>
+                      </div>
+                      <div>
+                        <button type="button" class="btn btn-link"><img src="assets/img/flag/Germany.png" alt="Germany"></button>
+                      </div>
+                      <div>
+                        <button type="button" class="btn btn-link"><img src="assets/img/flag/France.png" alt="France"></button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-7">
+                    <button type="clear" class="btn btn-primary">Reset Filter</button>
+                  </div>
+                </div>
               </div>
               <div class="nl-players-filter-title">FILTER by team:</div>
               <div class="nl-players-filter-caruseul">
