--- a/markup/_dist/my_teams.html
+++ b/markup/_dist/my_teams.html
@@ -106,7 +106,7 @@
             </div>
           </div>
           <div class="row nl-m-b-25">
-            <div class="col-12 col-md-6 col-lg-3">
+            <div class="col-12 col-md-6 col-lg-6 col-xl-3">
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
@@ -198,18 +198,16 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card-footer">
-                      <div class="row align-items-center">
-                        <div class="col-5">
-                          <div class="nl-team-card-btns">
-                            <button class="btn btn-primary btn-sm nl-m-b-14">Edit</button>
-                            <button class="btn btn-primary btn-sm btn-warning">Delete</button>
-                          </div>
+                      <div class="nl-team-card-footer--left">
+                        <div class="nl-team-card-btns">
+                          <button class="btn btn-primary btn-sm nl-m-b-14">Edit</button>
+                          <button class="btn btn-primary btn-sm btn-warning">Delete</button>
                         </div>
-                        <div class="col-7">
-                          <div class="nl-team-card-result">
-                            <p>TOTAL:<span class="result">$69000</span></p>
-                            <p>FP TOTAL:<span class="result">199.7</span></p>
-                          </div>
+                      </div>
+                      <div class="nl-team-card-footer--right">
+                        <div class="nl-team-card-result">
+                          <p>TOTAL:<span class="result">$69000</span></p>
+                          <p>FP TOTAL:<span class="result">199.7</span></p>
                         </div>
                       </div>
                     </div>
@@ -217,7 +215,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-3">
+            <div class="col-12 col-md-6 col-lg-6 col-xl-3">
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
@@ -309,18 +307,16 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card-footer">
-                      <div class="row align-items-center">
-                        <div class="col-5">
-                          <div class="nl-team-card-btns">
-                            <button class="btn btn-primary btn-sm nl-m-b-14">Edit</button>
-                            <button class="btn btn-primary btn-sm btn-warning">Delete</button>
-                          </div>
+                      <div class="nl-team-card-footer--left">
+                        <div class="nl-team-card-btns">
+                          <button class="btn btn-primary btn-sm nl-m-b-14">Edit</button>
+                          <button class="btn btn-primary btn-sm btn-warning">Delete</button>
                         </div>
-                        <div class="col-7">
-                          <div class="nl-team-card-result">
-                            <p>TOTAL:<span class="result">$69000</span></p>
-                            <p>FP TOTAL:<span class="result">199.7</span></p>
-                          </div>
+                      </div>
+                      <div class="nl-team-card-footer--right">
+                        <div class="nl-team-card-result">
+                          <p>TOTAL:<span class="result">$69000</span></p>
+                          <p>FP TOTAL:<span class="result">199.7</span></p>
                         </div>
                       </div>
                     </div>
@@ -328,7 +324,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-3">
+            <div class="col-12 col-md-6 col-lg-6 col-xl-3">
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
@@ -420,18 +416,16 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card-footer">
-                      <div class="row align-items-center">
-                        <div class="col-5">
-                          <div class="nl-team-card-btns">
-                            <button class="btn btn-primary btn-sm nl-m-b-14">Edit</button>
-                            <button class="btn btn-primary btn-sm btn-warning">Delete</button>
-                          </div>
+                      <div class="nl-team-card-footer--left">
+                        <div class="nl-team-card-btns">
+                          <button class="btn btn-primary btn-sm nl-m-b-14">Edit</button>
+                          <button class="btn btn-primary btn-sm btn-warning">Delete</button>
                         </div>
-                        <div class="col-7">
-                          <div class="nl-team-card-result">
-                            <p>TOTAL:<span class="result">$69000</span></p>
-                            <p>FP TOTAL:<span class="result">199.7</span></p>
-                          </div>
+                      </div>
+                      <div class="nl-team-card-footer--right">
+                        <div class="nl-team-card-result">
+                          <p>TOTAL:<span class="result">$69000</span></p>
+                          <p>FP TOTAL:<span class="result">199.7</span></p>
                         </div>
                       </div>
                     </div>
@@ -439,7 +433,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-3">
+            <div class="col-12 col-md-6 col-lg-6 col-xl-3">
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
@@ -531,18 +525,16 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card-footer">
-                      <div class="row align-items-center">
-                        <div class="col-5">
-                          <div class="nl-team-card-btns">
-                            <button class="btn btn-primary btn-sm nl-m-b-14">Edit</button>
-                            <button class="btn btn-primary btn-sm btn-warning">Delete</button>
-                          </div>
+                      <div class="nl-team-card-footer--left">
+                        <div class="nl-team-card-btns">
+                          <button class="btn btn-primary btn-sm nl-m-b-14">Edit</button>
+                          <button class="btn btn-primary btn-sm btn-warning">Delete</button>
                         </div>
-                        <div class="col-7">
-                          <div class="nl-team-card-result">
-                            <p>TOTAL:<span class="result">$69000</span></p>
-                            <p>FP TOTAL:<span class="result">199.7</span></p>
-                          </div>
+                      </div>
+                      <div class="nl-team-card-footer--right">
+                        <div class="nl-team-card-result">
+                          <p>TOTAL:<span class="result">$69000</span></p>
+                          <p>FP TOTAL:<span class="result">199.7</span></p>
                         </div>
                       </div>
                     </div>
